--- a/config.json
+++ b/config.json
@@ -10,13 +10,14 @@
     "DISCORD_MESSAGE_TEMPLATE": "`%username%`: %message%",
 
     "SPIGOT_PAPER": false,
-    
+
     "MINECRAFT_SERVER_RCON_IP": "127.0.0.1",
     "MINECRAFT_SERVER_RCON_PORT": 25575,
     "MINECRAFT_SERVER_RCON_PASSWORD": "password",
     "MINECRAFT_TELLRAW_TEMPLATE": "[{\"color\": \"white\", \"text\": \"<%username%> %message%\"}]",
     "MINECRAFT_TELLRAW_DOESNT_EXIST": false,
     "MINECRAFT_TELLRAW_DOESNT_EXIST_SAY_TEMPLATE": "<%username%> %message%",
+    "REMOVE_EMOJI_FROM_CHAT": false,
 
     "IS_LOCAL_FILE": false,
     "LOCAL_FILE_PATH": "/usr/home/minecraft_server/logs/latest.log",
