--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/destruc7i0n/shulker#readme",
   "dependencies": {
+    "@types/ws": "^7.4.0",
     "axios": "^0.21.0",
-    "discord.js": "^11.6.1",
+    "discord.js": "^12.5.1",
     "emoji-strip": "^1.0.1",
     "express": "^4.17.1",
     "tail": "^2.0.4"
